<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/routeNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/vertical_margin"
        android:text="@string/routeNum" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/distance"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/vertical_margin"
        android:text="@string/time"
        android:textColor="@color/blue" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blueTrack"
        android:layout_marginHorizontal="@dimen/horizontal_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginVertical="@dimen/vertical_margin"
        android:weightSum="100">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/reject"
            android:text="@string/reject"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:textColor="@color/greyTrack"
            android:layout_weight="50"/>

        <Button
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/accept"
            android:text="@string/accept"
            android:textColor="@color/blueTrack"
            android:layout_weight="50"/>
    </LinearLayout>
</LinearLayout>