<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_searching_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <LinearLayout
        android:id="@+id/action_partition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/action_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/tripSummary"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tripSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/amountTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/amount"
            android:textSize="@dimen/text_input_36" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/tripSummaryText"
            android:layout_marginBottom="@dimen/vertical_margin"/>


        <include layout="@layout/layout_rider_location_detail"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/bottom_margin"
            android:orientation="horizontal"
            android:weightSum="100">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="36dp"
                android:src="@drawable/distance"
                android:background="@color/blue2"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/distanceTV"
                android:layout_width="120dp"
                android:layout_height="36dp"
                android:layout_weight="30"
                android:fontFamily="sans-serif-medium"
                android:text="@string/distance"
                android:textSize="@dimen/text_input_16"
                android:textColor="@color/startGradientColor"
                android:background="@color/blue2"
                android:padding="8dp"/>


            <ImageView
                android:layout_width="48dp"
                android:layout_height="36dp"
                android:src="@drawable/duration"
                android:layout_marginLeft="24dp"
                android:background="@color/blue2"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/timeTV"
                android:layout_width="120dp"
                android:layout_height="36dp"
                android:layout_weight="30"
                android:fontFamily="sans-serif-medium"
                android:text="@string/time"
                android:textSize="@dimen/text_input_16"
                android:background="@color/blue2"
                android:padding="8dp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/rateRider"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_button_blue"
        android:text="@string/rateTrip"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:textSize="@dimen/button_text_size" />

    <include
        layout="@layout/layout_contact_support"/>

</LinearLayout>