<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/endRideText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/horizontal_margin"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:gravity="left"
        android:text="@string/endRide"
        android:textColor="@color/darkGrey"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/areyousureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:gravity="left"
        android:text="@string/areyousure"
        android:textSize="@dimen/text_input_16"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/horizontal_margin"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelRideAlert"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:background="@android:color/transparent"
            android:text="@string/dCancel"
            android:textColor="@color/darkGrey" />

        <Button
            android:id="@+id/endRideAlert"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:text="@string/endRide"
            android:textColor="@color/blue" />
    </LinearLayout>
</LinearLayout>