<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_searching_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/action_partition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/action_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/rideFound"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginVertical="@dimen/top_margin"
        android:layout_marginHorizontal="@dimen/horizontal_margin">

        <Button
            android:id="@+id/dNavigateToRider"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_small_height"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_button_blue"
            android:drawableLeft="@drawable/ic_navigate"
            android:drawablePadding="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="12dp"
            android:text="@string/navigate"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_small_text_size"/>

        <Button
            android:id="@+id/dCallRider"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_small_height"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_button_blue"
            android:drawableLeft="@drawable/ic_call"
            android:drawablePadding="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="12dp"
            android:text="@string/callRider"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_small_text_size"
            android:layout_marginLeft="@dimen/horizontal_margin"/>

    </LinearLayout>

    <Button
        android:id="@+id/startTrip"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_button_blue"
        android:drawableLeft="@drawable/ic_play"
        android:drawablePadding="2dp"
        android:paddingLeft="60dp"
        android:paddingRight="40dp"
        android:text="@string/startTrip"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size"/>

    <Button
        android:id="@+id/cancelRide"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_small_height"
        android:layout_marginVertical="@dimen/top_margin"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_button_grey"
        android:text="@string/cancelRide"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_small_text_size"/>
</LinearLayout>