<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/horizontal_margin"
    android:layout_marginVertical="@dimen/horizontal_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/rateRiderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text="@string/rateRider"
        android:textColor="@color/blue"
        android:textSize="20dp" />

    <RatingBar
        android:id="@+id/rateRider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/bottom_margin"
        android:numStars="5"
        android:progressTint="@color/blue"
        android:stepSize="1" />


    <EditText
        android:id="@+id/commentsET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/bg_rounded_edittext"
        android:gravity="center"
        android:hint="@string/comments"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_input"
        android:inputType="text"
        android:selectAllOnFocus="true"/>


    <Button
        android:id="@+id/done"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginVertical="20dp"
        android:background="@drawable/rounded_button_blue"
        android:fontFamily="sans-serif-medium"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
</LinearLayout>