<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_searching_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/action_partition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/action_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/dOnTrip"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <include layout="@layout/layout_rider_location_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginVertical="@dimen/top_margin"
        android:layout_marginHorizontal="@dimen/horizontal_margin">

        <Button
            android:id="@+id/startRide"
            android:layout_width="120dp"
            android:layout_height="@dimen/button_small_height"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_button_blue"
            android:drawableLeft="@drawable/navigate"
            android:drawablePadding="4dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/navigate"
            android:textAllCaps="false"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/endRide"
            android:layout_width="120dp"
            android:layout_height="@dimen/button_small_height"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_button_blue"
            android:text="@string/endRide"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_marginLeft="@dimen/horizontal_margin"/>

    </LinearLayout>
</LinearLayout>