<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.CreateOrEditRiderActivity">

    <include
        layout="@layout/view_logo_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <LinearLayout
        android:padding="20dp"
        android:layout_gravity=""
        android:gravity="center_horizontal"
        android:layout_weight="4"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:padding="10dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@color/textColorNormal"
                android:text="@string/txt_name"
                android:layout_marginBottom="12dp"
                />
            <EditText
                android:id="@+id/etName"
                android:layout_width="240dp"
                android:hint="@string/txt_name"
                android:background="@drawable/bg_rounded_edittext"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@color/textColorNormal"
                android:text="@string/txt_email"
                android:layout_marginBottom="12dp"
                />
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="240dp"
                android:hint="@string/txt_email"
                android:background="@drawable/bg_rounded_edittext"
                android:layout_height="wrap_content" />
        </LinearLayout>




        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="@color/textColorNormal"
            android:text="@string/txt_term_n_condition" />

        <LinearLayout
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </LinearLayout>

        <RelativeLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="240dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/layerlist"
                android:padding="20dp">

                <Switch
                    android:layout_margin="10dp"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:textColor="#3c3c3c"
                    android:text="@string/txt_disabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_gravity="center"
                    android:id="@+id/btnUpload"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:layout_width="wrap_content"
                    android:background="@drawable/rounded_button_grey"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/action_upload"
                    android:textColor="@android:color/white"
                    />

            </LinearLayout>
            <TextView
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#fffafafa"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="Disability Information"
                android:textColor="#dc5000"
                android:textSize="16sp"
                android:textStyle="normal" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="240dp"
            android:background="@drawable/rounded_button_blue"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/action_continue"
            android:textColor="@android:color/white"
            android:layout_marginTop="30dp"
            />
    </LinearLayout>

</LinearLayout>
