<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/top_margin"
        android:orientation="horizontal"
        android:weightSum="100">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="0dp"
            android:layout_height="@dimen/driver_image_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/top_margin"
            android:layout_weight="33"
            android:src="@drawable/ic_rider" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_weight="66"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rideRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_8"
                android:text="@string/rideRequest"
                android:textSize="@dimen/text_input_16"/>

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="time"
                android:textColor="@color/blueTrack"
                android:textSize="24dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/blueTrack"
                android:layout_marginVertical="@dimen/top_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|bottom"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/rejectRide"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_close"
                    android:text="@string/reject"
                    android:textColor="@color/greyTrack"/>

                <Button
                    android:id="@+id/acceptRide"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:background="@android:color/transparent"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/ic_check"
                    android:text="@string/accept"
                    android:textColor="@color/blueTrack"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>